=== master

* Recognize sqlite:filename and amalgalite:filename connection URLs (jeremyevans) (#2334)

=== 5.97.0 (2025-10-01)

* Simplify Postgres::PGRange#inspect output (jeremyevans)

* Add deprecated_associations plugin, for warning/raising for deprecated association access (jeremyevans)

* Clear all cached schema information when using Database#drop_schema on PostgreSQL (jeremyevans)

* Add Database#rename_schema on PostgreSQL (jeremyevans)

=== 5.96.0 (2025-09-01)

* Support alter_table rename_constraint on PostgreSQL 9.2+ (jeremyevans) (#2274)

* Do not auto parameterize PostgreSQL range and multirange types containing expressions (jeremyevans)

* Support sort and reverse methods in pg_array_ops extension on PostgreSQL 18+ (jeremyevans)

* Support :in_arrays option for Postgres::JSON{,B}#strip_nulls in pg_json_ops extension on PostgreSQL 18+ (jeremyevans)

* Support VIRTUAL generated columns on PostgreSQL 18+ using :virtual option (jeremyevans)

=== 5.95.1 (2025-08-05)

* Fix regression in 5.95.0 where :deferred would be ignored for unique and primary key constraints on PostgreSQL (jeremyevans) (#2321)

=== 5.95.0 (2025-08-01)

* Support num_waiting for the timed_queue and shared_timed_queue connection pools (jeremyevans)

* Add class_table_inheritance_constraint_validations plugin, supporting constraint validations for all of the model's tables (sterlzbd, jeremyevans) (#2316, #2319)

* Support :no_inherit option for CHECK constraints on PostgreSQL 9.2+ (jeremyevans)

* Support :no_inherit option for NOT NULL constraints on PostgreSQL 18+ (jeremyevans)

* Support not_null: {name: "constaint_name"} column option for naming NOT NULL constraints on PostgreSQL 18+ (jeremyevans)

* Support :period foreign_key option for PERIOD on PostgreSQL 18+ (jeremyevans)

* Support :include unique/primary_key/exclude option for INCLUDE on PostgreSQL 11+ (jeremyevans)

* Support :nulls_not_distinct unique option for NULLS NOT DISTINCT on PostgreSQL 15+ (jeremyevans)
