@@ -711,6 +711,10 @@
 <span class="ul__span">Automatically parameterizes queries when using the postgres adapter with the pg driver.</span>
 </li>
 <li class="ul__li ul__li--grid">
+<a class="a" href="rdoc-plugins/files/lib/sequel/extensions/pg_auto_parameterize_duplicate_query_detection.html">pg_auto_parameterize_duplicate_query_detection </a>
+<span class="ul__span">Builds on pg_auto_parameterize, adding support for detecting duplicate queries inside a block.</span>
+</li>
+<li class="ul__li ul__li--grid">
 <a class="a" href="rdoc-plugins/files/lib/sequel/extensions/pg_auto_parameterize_in_array_rb.html">pg_auto_parameterize_in_array </a>
 <span class="ul__span">Builds on pg_auto_parameterize, but handles additional types when converting IN/NOT IN to = ANY/!= ALL.</span>
 </li>
